[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/EditorsElements/VariblesEditor/EditStringVarible.gd" type="Script" id=1]

[node name="String" type="HBoxContainer"]
margin_right = 152.0
margin_bottom = 300.0
script = ExtResource( 1 )

[node name="Edits" type="VBoxContainer" parent="."]
margin_right = 83.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StringEdit" type="LineEdit" parent="Edits"]
visible = false
margin_right = 46.0
margin_bottom = 25.0
size_flags_horizontal = 3

[node name="ExpandEdit" type="TextEdit" parent="Edits"]
margin_right = 83.0
margin_bottom = 300.0
rect_min_size = Vector2( 0, 300 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ExpandBt" type="CheckBox" parent="."]
margin_left = 87.0
margin_right = 152.0
margin_bottom = 24.0
size_flags_vertical = 0
text = "Expand"

[connection signal="text_changed" from="Edits/StringEdit" to="." method="_on_StringEdit_text_changed"]
[connection signal="text_changed" from="Edits/ExpandEdit" to="." method="_on_ExpandEdit_text_changed"]
[connection signal="toggled" from="ExpandBt" to="." method="_on_ExpandBt_toggled"]
